--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.11.1",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
     "i": "^0.3.7",
     "in-view": "^0.6.1",
@@ -38,6 +38,7 @@
     "intersection-observer": "^0.12.2",
     "localstorage-slim": "^2.7.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.526.0",
     "moment": "^2.30.1",
     "npm": "^10.8.2",
     "react": "^18.2.0",
